src/journey.js.scss
/* ... */
/*
    -------------------------------------------------------------------------
    Journey.js - Dialog
    -------------------------------------------------------------------------
*/

div.journey-js-dialog {
    @include no-selection-allowed;
    @include box-sizing;
    font-family: var(--journey-js-default-font);
    position: absolute;
    display: none;
    border-radius: var(--journey-js-border-radius);
    background-color: var(--journey-js-dialog-background-color);
    color: var(--journey-js-dialog-text-color);
    border: var(--journey-js-border-size) solid var(--journey-js-dialog-border-color);
    padding: var(--journey-js-spacing);
    font-size: var(--journey-js-spacing-font-size);
    z-index: 1001;
    width: 300px;
    height: auto;
    transition: var(--journey-js-transition);
    transition-property: top, left;

    * {
        @include box-sizing;

        &::before,
        &::after {
            @include box-sizing;
        }
    }

    div {
        &:first-of-type {
            padding-right: calc( var(--journey-js-dialog-close-button-size) + var(--journey-js-spacing) );
        }
    }

    div.title {
        font-size: large;
        font-weight: var(--journey-js-title-bold-weight);
        margin-bottom: var(--journey-js-spacing);
    }

    div.description {
        font-weight: var(--journey-js-text-bold-weight);
    }
}

div.journey-js-dialog-moving {
    transition: none !important;
    transition-property: none !important;
}


/*
    -------------------------------------------------------------------------
    Journey.js - Dialog - Close Button
    -------------------------------------------------------------------------
*/

div.journey-js-dialog {
    button.close {
        position: absolute;
        top: var(--journey-js-spacing);
        right: var(--journey-js-spacing);
        width: var(--journey-js-dialog-close-button-size);
        height: var(--journey-js-dialog-close-button-size);
        border-radius: 0.25rem;
        padding: 0;
        background-color: var(--journey-js-dialog-close-button-background-color);
        border: var(--journey-js-border-size) solid var(--journey-js-dialog-close-button-border-color);
        transition: var(--journey-js-transition);

        &::before,
        &::after {
            content: '';
            width: 2px;
            height: 100%;
            background: var(--journey-js-dialog-close-button-x-color);
            display: block;
            transform: rotate(45deg) translateX(0px);
            position: absolute;
            left: calc( 50% - 0.5px );
            top: 0;
        }

        &::after {
            transform: rotate(-45deg) translateX(0px);
        }

        &:active {
            border: var(--journey-js-border-size) solid var(--journey-js-dialog-close-button-active-border-color) !important;
            background-color: var(--journey-js-dialog-close-button-active-background-color) !important;

            &::before,
            &::after {
                background: var(--journey-js-dialog-close-button-active-x-color) !important;
            }
        }

        &:hover {
            cursor: pointer;
            border: var(--journey-js-border-size) solid var(--journey-js-dialog-close-button-hover-border-color);
            background-color: var(--journey-js-dialog-close-button-hover-background-color);

            &::before,
            &::after {
                background: var(--journey-js-dialog-close-button-hover-x-color);
            }
        }
    }
}
/* ... */

